; ModuleID = '/home/carl/AnghaBench/linux/sound/aoa/soundbus/extr_core.c_soundbus_dev_put.c'
source_filename = "/home/carl/AnghaBench/linux/sound/aoa/soundbus/extr_core.c_soundbus_dev_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.soundbus_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @soundbus_dev_put(%struct.soundbus_dev* %0) #0 {
  %2 = alloca %struct.soundbus_dev*, align 8
  store %struct.soundbus_dev* %0, %struct.soundbus_dev** %2, align 8
  %3 = load %struct.soundbus_dev*, %struct.soundbus_dev** %2, align 8
  %4 = icmp ne %struct.soundbus_dev* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.soundbus_dev*, %struct.soundbus_dev** %2, align 8
  %7 = getelementptr inbounds %struct.soundbus_dev, %struct.soundbus_dev* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = call i32 @put_device(i32* %8)
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @put_device(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
